--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Ielsi | Sistemas Fotovoltaicos y Ecotecnologías en Morelia Michoacán México</title>
+    <title>Ielsi | Instalación de Paneles Solares en Morelia Michoacán México</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -488,7 +488,7 @@
             <div class="col-sm-3 col-xs-6 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">
                 <i class="fa fa-cogs"></i>
                 <h3 class="timer">145</h3>
-                <p>Proyectos elavorados</p>
+                <p>Proyectos elaborados</p>
             </div>
             <div class="col-sm-3 col-xs-6 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="700ms">
                 <i class="fa fa-trophy"></i>
@@ -509,7 +509,7 @@
         <div class="row">
             <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1200ms"
                  data-wow-delay="300ms">
-                <h2>Nuestros kits de Sistemas Fotovoltaicos para ti</h2>
+                <h2>Nuestros kits de Sistemas Fotovoltaicos para ti*</h2>
                 <p>Estamos seguros que alguno de nuestros kits se adapta a tus necesidades y si no es así <a href="#contact">contáctanos</a> para poder ofrecerte justo lo que necesitas.</p>
             </div>
         </div>
@@ -518,15 +518,16 @@
                 <div class="col-lg-1 col-xl-1"></div>
                 <div class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
                     <div class="single-table wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
-                        <h3>1 KW</h3>
+                        <h3>2.2 KW</h3>
                         <div class="price">
-                            <span ><h4>$33,000.00  c/u</h4></span>
+                            <span ><h4>$36,000.00  </h4></span>
                         </div>
                         <ul>
-                            <li><h6> 1000w producción diaria 5000 wh/día</h6></li>
-                            <li><h6>4 paneles solartec 260w policristalino.</h6></li>
-                            <li><h6>Estructura en aluminio anodizado.</h6></li>
-                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 10m)*</h6></li>
+                            <li><h6>Producción diaria 9.9 kwh/día</h6></li>
+                            <li><h6>4 paneles CANADIAN 550w</h6></li>
+                            <li><h6>1 inversor Huawei 2000 w</h6></li>
+                            <li><h6>Estructura en aluminio anodizado.**</h6></li>
+                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 15m)***</h6></li>
                            
                         </ul>
                         <a href="http://blog.ielsi.com/kits-de-sistemas-fotovoltaicos/" class="btn btn-lg btn-primary">Ver mas</a>
@@ -534,15 +535,16 @@
                 </div> 
                 <div class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
                     <div class="single-table wow flipInY" data-wow-duration="1000ms" data-wow-delay="500ms">
-                        <h3>2 KW</h3>
+                        <h3>3.3 KW</h3>
                         <div class="price">
-                            <span><h4>$32,000.00  c/u</h4></span>
+                            <span><h4>$54,000.00  </h4></span>
                         </div>
                         <ul>
-                            <li><h6>2 kw- 2000w producción diaria 10000 wh/día</h6></li>
-                            <li><h6>8 paneles solartec 260w policristalino.</h6></li>
-                            <li><h6>Estructura en aluminio anodizado.</h6></li>
-                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 10m)*</h6></li>
+                            <li><h6>Producción diaria 14.85 kwh/día</h6></li>
+                            <li><h6>6 paneles CANADIAN 550w.</h6></li>
+                            <li><h6>1 inversor Huawei 5000 w</h6></li>
+                            <li><h6>Estructura en aluminio anodizado marca Everest**</h6></li>
+                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 15m)***</h6></li>
 
                         </ul>
                         <a href="http://blog.ielsi.com/kits-de-sistemas-fotovoltaicos/" class="btn btn-lg btn-primary">Ver mas</a>
@@ -550,15 +552,16 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
                     <div class="single-table featured wow flipInY" data-wow-duration="1000ms" data-wow-delay="800ms">
-                        <h3>3 KW</h3>
+                        <h3> 4.4 KW</h3>
                         <div class="price">
-                            <span><h4>$30,000.00 c/u</h4></span>
+                            <span><h4>$72,000.00 </h4></span>
                         </div>
                         <ul>
-                            <li><h6>3 kw- 3000w producción diaria 15000 wh/día</h6></li>
-                            <li><h6>12 paneles solartec 260w policristalino</h6></li>
-                            <li><h6>Estructura en aluminio anodizado.</h6></li>
-                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 10m)*</h6></li>
+                            <li><h6>Producción diaria 19.8 kwh/día</h6></li>
+                            <li><h6>8 paneles CANADIAN 550w</h6></li>
+                            <li><h6>1 inversor Huawei 5000 w</h6></li>
+                            <li><h6>Estructura en aluminio anodizado marca Everest**</h6></li>
+                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 15m)***</h6></li>
 
                         </ul>
                         <a href="http://blog.ielsi.com/kits-de-sistemas-fotovoltaicos/" class="btn btn-lg btn-primary">Ver mas</a>
@@ -566,15 +569,16 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
                     <div class="single-table wow flipInY" data-wow-duration="1000ms" data-wow-delay="1100ms">
-                        <h3>5 KW</h3>
+                        <h3>5.5 KW</h3>
                         <div class="price">
-                            <span><h4>$29,000.00  c/u</h4></span>
+                            <span><h4>$90,000.00 </h4></span>
                         </div>
                         <ul>
-                            <li><h6>5 kw- 5000w producción diaria 25000 wh/día</h6></li>
-                            <li><h6>20 paneles solartec 260w policristalino.</h6></li>
-                            <li><h6>Estructura en aluminio anodizado.</h6></li>
-                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 10m)*</h6></li>
+                            <li><h6>Producción diaria 24.75 kwh/día</h6></li>
+                            <li><h6>10 paneles CANADIAN 550w.</h6></li>
+                            <li><h6>Inversor Huawei 5000w</h6></li>
+                            <li><h6>Estructura en aluminio anodizado marca Everest**</h6></li>
+                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 15m)***</h6></li>
  
                         </ul>
                         <a href="http://blog.ielsi.com/kits-de-sistemas-fotovoltaicos/" class="btn btn-lg btn-primary">Ver mas</a>
@@ -582,22 +586,26 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-2 col-xl-2">
                     <div class="single-table wow flipInY" data-wow-duration="1000ms" data-wow-delay="1100ms">
-                        <h3>7.5 KW</h3>
+                        <h3>6.6 KW</h3>
                         <div class="price">
-                            <span><h4>$27,000.00  c/u</h4></span>
+                            <span><h4>$108,000.00 </h4></span>
                         </div>
                         <ul>
-                            <li><h6>7.5 kw- 7500w producción diaria 37500 wh/día</h6></li>
-                            <li><h6>30 paneles solartec 260w policristalino.</h6></li>
-                            <li><h6>Estructura en aluminio anodizado.</h6></li>
-                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 10m)*</h6></li>
+                            <li><h6>Producción diaria 29.7 kwh/día</h6></li>
+                            <li><h6>12 paneles CANADIAN 550w.</h6></li>
+                            <li><h6>Inversor Huawei 6000w</h6></li>
+                            <li><h6>Estructura en aluminio anodizado marca Everest**</h6></li>
+                            <li><h6>Tubería, cableado y accesorios de anclaje y conexión (máximo 15m)***</h6></li>
 
                         </ul>
                         <a href="http://blog.ielsi.com/kits-de-sistemas-fotovoltaicos/" class="btn btn-lg btn-primary">Ver mas</a>
                     </div>
                 </div>
             </div>
-            <p><h6>*Nota: en caso de que la acometida eléctrica del sistema fotovoltaico exceda los 10m se tendrá que considerar la cotización de los metros restantes.</h6></p>
+            <p><h6> *Exclusivamente para servicios a 220 V.</p> 
+                   <p> **En caso de requerir estructura la herrería se cotizara por separado.</p>
+                   <p> ***Estos costos solo son aplicables para Morelia  y zonas aledañas (100km a la redonda).</p>
+                   </h6></p>
         </div>
     </div>
 </section><!--/#pricing-->
